infra/kubernetes/cluster/config/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  gatewayClassName: gateway-class
  listeners:
  - name: http-dev
    protocol: HTTP
    port: 80
    hostname: "dev.condensation.corentindupaigne.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https-dev
    protocol: HTTPS
    port: 443
    hostname: "dev.condensation.corentindupaigne.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: dev-condensation-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: dev
  - name: http-prod
    protocol: HTTP
    port: 80
    hostname: "condensation.corentindupaigne.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https-prod
    protocol: HTTPS
    port: 443
    hostname: "condensation.corentindupaigne.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: prod-condensation-tls
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: prod
