infra/kubernetes/cluster/config/http-redirect-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect-dev
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: default
    sectionName: http-dev
  hostnames:
  - "dev.condensation.corentindupaigne.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect-prod
  namespace: default
spec:
  parentRefs:
  - name: gateway
    namespace: default
    sectionName: http-prod
  hostnames:
  - "condensation.corentindupaigne.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
